Adds spring day.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -21,27 +21,28 @@ Don't worry if you miss a stream - we'll post them on [YouTube](https://www.yout
 
 We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [YouTube](https://www.youtube.com/c/Redisinc/videos) each working day in December… times will vary and we'll update the schedule below daily, revealing each day's topic as we go.
 
-|Date/Time               |Topic                                                    |Join Us!                                                          |
-|------------------------|---------------------------------------------------------|------------------------------------------------------------------|
-|Wed 1 Dec, 9am UTC      |Welcome to DEVcember, Get Started with Redis in the Cloud|<iframe src="https://www.youtube.com/embed/jf-lwkWUQHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Thu 2 Dec, 10.30am UTC  |Up and Running with RedisInsight                         |<iframe src="https://www.youtube.com/embed/S-CXWP50ewM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Fri 3 Dec, 8pm UTC      |The Redis List goes on and on!                           |<iframe src="https://www.youtube.com/embed/OjoAmWOPk64" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Sat 4 / Sun 5 Dec       |First weekend hands-on exercise                          |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend1)|
-|Mon 6 Dec, 4:30pm UTC   |Let's try out Redis OM for Python                        |<iframe src="https://www.youtube.com/embed/gi6jugJsKS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Tue 7 Dec, 5pm UTC      |The Scoop on Big O Notation                              |<iframe src="https://www.youtube.com/embed/xSuZjetOhgs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Wed 8 Dec, 4:30pm UTC   |Get! Set! Go!                                            |<iframe src="https://www.youtube.com/embed/e1wD52EAiQw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Thu 9 Dec, 10:30am UTC  |Have I Seen You Before? Introducing Bloom Filters        |<iframe src="https://www.youtube.com/embed/qgJRoWBmEoQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Fri 10 Dec, 6pm UTC     |You Can (Mostly) Count on Hyperloglog!                   |<iframe src="https://www.youtube.com/embed/pUpSnaqpcks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Sat 11 / Sun 12 Dec     |Second weekend hands-on exercise                         |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend2)|
-|Mon 13 Dec, 4pm UTC     |Sort it out! All about Sorted Sets                       |<iframe src="https://www.youtube.com/embed/iV-NcMpQa7c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Tue 14 Dec, 4:45pm UTC  |What's the Score? Top K with Redis Bloom!                |<iframe src="https://www.youtube.com/embed/u940lEA2Pv4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Wed 15 Dec, 10am UTC    |Seek and You May Find… Introducing RediSearch! (Part 1)  |<iframe src="https://www.youtube.com/embed/6uxpXvM-WSQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Wed 15 Dec, 10am UTC    |Seek and You May Find… Introducing RediSearch! (Part 2)  |<iframe src="https://www.youtube.com/embed/pOWpESEXzrc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Thu 16 Dec, 3:45pm UTC  |Introducing Redis OM for Node.js                         |<iframe src="https://www.youtube.com/embed/y0Sx_5Csld8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Fri 17 Dec, 4pm UTC     |Object Mapping and More! Redis OM for .NET               |<iframe src="https://www.youtube.com/embed/DnsRTa3dFxo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Sat 18 / Sun 19 Dec     |Third weekend hands-on exercise                          |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend3)|
-|Mon 20 Dec, 1pm UTC     |Don't Cross the (Redis) Streams!                         |<iframe src="https://www.youtube.com/embed/xhFKFDfYMCg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Tue 21 Dec, 5pm UTC     |What's the deal with Pub/Sub?                            |<iframe src="https://www.youtube.com/embed/Eyj8nYeEGps" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Date/Time               |Topic                                                     |Join Us!                                                          |
+|------------------------|----------------------------------------------------------|------------------------------------------------------------------|
+|Wed 1 Dec, 9am UTC      |Welcome to DEVcember, Get Started with Redis in the Cloud |<iframe src="https://www.youtube.com/embed/jf-lwkWUQHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Thu 2 Dec, 10.30am UTC  |Up and Running with RedisInsight                          |<iframe src="https://www.youtube.com/embed/S-CXWP50ewM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Fri 3 Dec, 8pm UTC      |The Redis List goes on and on!                            |<iframe src="https://www.youtube.com/embed/OjoAmWOPk64" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Sat 4 / Sun 5 Dec       |First weekend hands-on exercise                           |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend1)|
+|Mon 6 Dec, 4:30pm UTC   |Let's try out Redis OM for Python                         |<iframe src="https://www.youtube.com/embed/gi6jugJsKS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Tue 7 Dec, 5pm UTC      |The Scoop on Big O Notation                               |<iframe src="https://www.youtube.com/embed/xSuZjetOhgs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Wed 8 Dec, 4:30pm UTC   |Get! Set! Go!                                             |<iframe src="https://www.youtube.com/embed/e1wD52EAiQw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Thu 9 Dec, 10:30am UTC  |Have I Seen You Before? Introducing Bloom Filters         |<iframe src="https://www.youtube.com/embed/qgJRoWBmEoQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Fri 10 Dec, 6pm UTC     |You Can (Mostly) Count on Hyperloglog!                    |<iframe src="https://www.youtube.com/embed/pUpSnaqpcks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Sat 11 / Sun 12 Dec     |Second weekend hands-on exercise                          |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend2)|
+|Mon 13 Dec, 4pm UTC     |Sort it out! All about Sorted Sets                        |<iframe src="https://www.youtube.com/embed/iV-NcMpQa7c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Tue 14 Dec, 4:45pm UTC  |What's the Score? Top K with Redis Bloom!                 |<iframe src="https://www.youtube.com/embed/u940lEA2Pv4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Wed 15 Dec, 10am UTC    |Seek and You May Find… Introducing RediSearch! (Part 1)   |<iframe src="https://www.youtube.com/embed/6uxpXvM-WSQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Wed 15 Dec, 10am UTC    |Seek and You May Find… Introducing RediSearch! (Part 2)   |<iframe src="https://www.youtube.com/embed/pOWpESEXzrc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Thu 16 Dec, 3:45pm UTC  |Introducing Redis OM for Node.js                          |<iframe src="https://www.youtube.com/embed/y0Sx_5Csld8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Fri 17 Dec, 4pm UTC     |Object Mapping and More! Redis OM for .NET                |<iframe src="https://www.youtube.com/embed/DnsRTa3dFxo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Sat 18 / Sun 19 Dec     |Third weekend hands-on exercise                           |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend3)|
+|Mon 20 Dec, 1pm UTC     |Don't Cross the (Redis) Streams!                          |<iframe src="https://www.youtube.com/embed/xhFKFDfYMCg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Tue 21 Dec, 5pm UTC     |What's the deal with Pub/Sub?                             |<iframe src="https://www.youtube.com/embed/Eyj8nYeEGps" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Wed 22 Dev, 5:15pm UTC  |Spring into Redis OM! (Redis OM for Java/Spring Framework)|<iframe src="https://www.youtube.com/embed/Fmzo48y67NM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 
 ## Meet the Team
 
