--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -48,4 +48,13 @@ The following links provide you with the available options to run apps on Heroku
         page="/create/heroku/ratelimiting-go"
         />
  </div>
+
+ <div class="col">
+     <RedisCard
+        title="Deploy a Ruby app on Heroku"
+        description="How to deploy a Ruby app on Heroku using Redis"
+        page="/create/heroku/herokuruby"
+        />
+ </div>
+
  </div>
