--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -15,7 +15,7 @@ Here's a quickstart guide to deploy Ruby apps over Heroku using Redis. We will b
 
 ### Step 1. Create Redis Enterprise Cloud
 
-Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free)
+Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free).
 
 ![recloud](try-free.png)
 
