--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -24,7 +24,7 @@ Create your free Redis Enterprise Cloud account by visiting [this link](https://
 
 ![heroku](launch_database.png)
 
-The database endpoint URL is unique for all and hence might be different in your case. Save it for future reference.
+The database endpoint URL is unique so will be different in your case. Save it for future reference.
 
 
 
