--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -30,7 +30,7 @@ The database endpoint URL is unique so will be different in your case. Save it f
 
 ### Step 2. Create a Heroku account
 
-If you are using Heroku for the first time, create your new Heroku account [through this link](https://signup.heroku.com/login)
+If you are using Heroku for the first time, create your new Heroku account [through this link](https://signup.heroku.com/login).
 
 ![heroku](create_heroku.png)
 
