--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -35,7 +35,7 @@ If you are using Heroku for the first time, create your new Heroku account [thro
 ![heroku](create_heroku.png)
 
 
-### Step 3. Install Heroku CLI on your system
+### Step 3. Install the Heroku CLI on your system
 
    ```macos
     brew install heroku
