--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -13,7 +13,7 @@ Heroku is a popular PaaS offering that allows software developers to easily depl
 Here's a quickstart guide to deploy Ruby apps over Heroku using Redis. We will be deploying a sample Leaderboard app and will be using company valuation and stock tickers as its domain.
 
 
-### Step 1. Create Redis Enterprise Cloud
+### Step 1. Create a Redis Enterprise Cloud Database
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free).
 
