--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -168,7 +168,7 @@ Open https://thawing-shore-07338.herokuapp.com/    to see your application
    ZREVRANGE  companyLeaderBoard company:AAPL company:FB company:TSLA
   ```
 
-- Adding 1 billion to market cap of FB company:
+- Add 1 billion to the market cap of the FB company:
 
   ```bash
    ZINCRBY companyLeaderBoard 1000000000 "company:FB"
