--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -174,7 +174,7 @@ Open https://thawing-shore-07338.herokuapp.com/    to see your application
    ZINCRBY companyLeaderBoard 1000000000 "company:FB"
   ```
 
-- Reducing 1 billion of market cap of FB company:
+- Reduce the market cap of the FB company by 1 billion:
 
   ```bash
    ZINCRBY companyLeaderBoard -1000000000 "company:FB"
