--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -180,7 +180,7 @@ Open https://thawing-shore-07338.herokuapp.com/    to see your application
    ZINCRBY companyLeaderBoard -1000000000 "company:FB"
   ```
 
-- Companies between 500 billion and 1 trillion:
+- How many companies have a market cap between 500 billion and 1 trillion?:
 
   ```bash
    ZCOUNT companyLeaderBoard 500000000000 1000000000000
