--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -186,7 +186,7 @@ Open https://thawing-shore-07338.herokuapp.com/    to see your application
    ZCOUNT companyLeaderBoard 500000000000 1000000000000
   ```
 
-- Companies over a Trillion:
+- How many companies have a market cap over a Trillion?:
 
    ```bash
     ZCOUNT companyLeaderBoard 1000000000000 +inf
