--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -193,7 +193,7 @@ Open https://thawing-shore-07338.herokuapp.com/    to see your application
    ```
 
 
-### Next Step
+### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
 - [Accessing Ruby-based apps over Redis LaunchPad](https://launchpad.redis.com/)
