--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -53,7 +53,7 @@ If you are using Heroku for the first time, create your new Heroku account [thro
 
 ### Step 5. Connect your application to Redis Enterprise Cloud
 
-For this demonstration, we will be using a [Sample Redis Leaderboard app](https://github.com/redis-developer/basic-redis-leaderboard-demo-ruby)
+For this demonstration, we will be using a [Sample Redis Leaderboard app](https://github.com/redis-developer/basic-redis-leaderboard-demo-ruby).
 
 #### Clone the repository
 
