--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -76,7 +76,7 @@ https://thawing-shore-07338.herokuapp.com/ | https://git.heroku.com/thawing-shor
 
 ### Step 6. Setting up Environment Variables
 
-Go to the Heroku dashboard, click "Settings" and set REDIS_HOST and REDIS_PASSWORD under the Config Vars.
+Go to the Heroku dashboard, click "Settings" and set `REDIS_HOST` and `REDIS_PASSWORD` under the Config Vars.
 Refer to Step 1 for the correct values to use.
 
 ![heroku](heroku_app1_env.png)
