--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -83,7 +83,7 @@ Refer to Step 1 for the correct values to use.
 
 
 
-You now have a functioning Git repository that contains a simple application as well as a package.json file, which is used by Node’s dependency manager.
+You now have a functioning Git repository that contains a simple application as well as a `package.json` file, which is used by Node’s dependency manager.
 
 
 
