--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -120,7 +120,7 @@ Open https://thawing-shore-07338.herokuapp.com/    to see your application
 
 ![heroku](heroku_leaderboard_ruby.png)
 
-### How it works?
+### How does it work?
 
 
 ####  How the data is stored:
