--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -162,7 +162,7 @@ Open https://thawing-shore-07338.herokuapp.com/    to see your application
    ZREVRANGE companyLeaderboard 9 14 WITHSCORES
   ```
 
-- Show ranks of AAPL, FB and TSLA:
+- Show rank for AAPL, FB and TSLA:
 
   ```bash
    ZREVRANGE  companyLeaderBoard company:AAPL company:FB company:TSLA
