Added Ruby tutorial for Heroku

--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -116,7 +116,8 @@ To https://git.heroku.com/thawing-shore-07338.git
 ### Step 8. Accessing the application
 
 
-Open https://thawing-shore-07338.herokuapp.com/    to see your application
+Open https://thawing-shore-07338.herokuapp.com/ to access your application on the browser.
+Please note that the Web URL is unique, hence it will be different in your case.
 
 ![heroku](heroku_leaderboard_ruby.png)
 
