Added Go tutorial for Heroku

--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -56,5 +56,14 @@ The following links provide you with the available options to run apps on Heroku
         page="/create/heroku/herokuruby"
         />
  </div>
+ </div>
+ <div class="row">
+ <div class="col">
+     <RedisCard
+        title="Deploy a Go app on Heroku"
+        description="How to deploy a Go app on Heroku using Redis"
+        page="/create/heroku/herokugo"
+        />
+ </div>
 
  </div>
