--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -63,7 +63,7 @@ For this demonstration, we will be using a [Sample Redis Leaderboard app](https:
 
 
 
-Run the commands below to get a functioning Git repository that contains a simple application as well as a `package.json` file.
+Run the commands below to get a functioning Git repository that contains a simple application as well as a `app.json` file.
 
 
 ```
@@ -83,7 +83,7 @@ Refer to Step 1 for the correct values to use.
 
 
 
-You now have a functioning Git repository that contains a simple application as well as a `package.json` file, which is used by Node’s dependency manager.
+You now have a functioning Git repository that contains a simple application as well as a `app.json` file, which is used by Node’s dependency manager.
 
 
 
