--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -120,7 +120,7 @@ To https://git.heroku.com/stark-island-03510
 ### Step 8. Accessing the application
 
 
-Open https://stark-island-03510.herokuapp.com/ to access your application on the browser.
+Open `https://stark-island-03510.herokuapp.com/` to access your application on the browser.
 Please note that the Web URL is unique, hence it will be different in your case.
 
 ![heroku](heroku_chatapp_go.png)
