--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -248,7 +248,7 @@ Get User HGETALL user:{id}.
 
 where we get data for the user with id: 2.
 
-- Online users: SMEMBERS online_users. This will return ids of users which are online
+- Online users: `SMEMBERS online_users`. This will return ids of users who are online
 
 - Get room ids of a user: SMEMBERS user:{id}:rooms. 
 Example: 
