--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -250,7 +250,7 @@ where we get data for the user with id: 2.
 
 - Online users: `SMEMBERS online_users`. This will return ids of users who are online
 
-- Get room ids of a user: SMEMBERS user:{id}:rooms. 
+- Get the ids of rooms that a user is in: `SMEMBERS user:{id}:rooms`. 
 Example: 
 
  ```
