--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -257,7 +257,7 @@ Example:
   SMEMBERS user:2:rooms
  ```
 
-This will return IDs of rooms for user with ID: 2
+This will return IDs of rooms for the user whose ID is 2
 
 - Get list of messages ZREVRANGE room:{roomId} {offset_start} {offset_end}. 
 Example: 
