--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -259,7 +259,7 @@ Example:
 
 This will return IDs of rooms for the user whose ID is 2
 
-- Get list of messages ZREVRANGE room:{roomId} {offset_start} {offset_end}. 
+- Get a list of messages: `ZREVRANGE room:{roomId} {offset_start} {offset_end}`. 
 Example: 
 
  ```
