--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -265,7 +265,7 @@ Example:
  ```
   ZREVRANGE room:1:2 0 50
  ```
-It will return 50 messages with 0 offsets for the private room between users with IDs 1 and 2.
+This returns 50 messages with 0 offsets for the private room between users with IDs 1 and 2.
 
 
 
