--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -137,7 +137,7 @@ When the server starts, the initialization step occurs. At first, a new Redis co
 For simplicity, a key named `total_users` is checked: if it does not exist, we fill the Redis database with initial data. `EXISTS total_users` (checks if the key exists).
 The demo data initialization is handled in multiple steps:
 
-#### Creating of demo users
+#### Creating demo users
 
 We create a new user id: INCR total_users. Then we set a user ID lookup key by user name: e.g. 
 
