--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -139,7 +139,7 @@ The demo data initialization is handled in multiple steps:
 
 #### Creating demo users
 
-We create a new user id: INCR total_users. Then we set a user ID lookup key by user name: e.g. 
+We create a new user id: `INCR total_users`. Then we set a user ID lookup key by user name: e.g. 
 
 ```
 SET username:nick user:1
