--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -145,7 +145,7 @@ We create a new user id: `INCR total_users`. Then we set a user ID lookup key by
 SET username:nick user:1
 ```
 
-And finally, the rest of the data is written to the hash set: 
+And finally, the rest of the data is written to a Redis hash: 
 
 Example:
 
