--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -175,7 +175,7 @@ Then we add messages to this room by writing to a sorted set:
  ```
 We use a stringified JSON object for keeping the message structure and simplify the implementation details for this demo-app.
 
-Populate the "General" room with messages. Messages are added to the sorted set with id of the "General" room: room:0
+Populate the "General" room with messages. Messages are added to the sorted set with id of the "General" room: `room:0`.
 
 #### Pub/sub
 
