--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -183,7 +183,7 @@ After initialization, a pub/sub subscription is created: `SUBSCRIBE MESSAGES`. A
 
 Again, for simplicity, each message is serialized to JSON, which we parse and then handle in the same manner, as WebSocket messages.
 
-Pub/sub allows connecting multiple servers written in different platforms without taking into consideration the implementation detail of each server.
+Pub/sub allows us to connect multiple servers written in different languages without taking into consideration the implementation detail of each server.
 
 #### Real-time chat and session handling
 
