--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -197,7 +197,7 @@ A global set with online_users key is used for keeping the online state for each
   SADD online_users 1
  ```
 
-Here we  have added user with id 1 to the set online_users
+Here we have added a user with id 1 to the set `online_users`
 
 After that, a message is broadcasted to the clients to notify them that a new user is joined the chat.
 
