--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -215,7 +215,7 @@ The type field of the serialized JSON corresponds to the real-time method we use
 
 The data is method-specific information. In the example above it's related to the new message.
 
-### How the data is stored?
+### How is the data stored?
 
 Redis is used mainly as a database to keep the user/messages data and for sending messages between connected servers.
 
