--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -222,7 +222,7 @@ Redis is used mainly as a database to keep the user/messages data and for sendin
 The real-time functionality is handled by Socket.IO for server-client messaging. Additionally each server instance subscribes to the `MESSAGES` pub/sub channel and dispatches messages once they arrive. Note that, the server transports pub/sub messages with a separate event stream (handled by Server Sent Events), this is due to the need to run the pub/sub message loop separately from socket.io signals.
 
 The chat data is stored in various keys and various data types.
-User data is stored in a hash set where each user entry contains the next values:
+User data is stored in a hash where each user entry contains the next values:
 - username: unique user name;
 - password: hashed password
 
