--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -246,7 +246,7 @@ Get User HGETALL user:{id}.
   HGETALL user:2
  ```
 
-where we get data for the user with id: 2.
+which gets data for the user with id: 2.
 
 - Online users: `SMEMBERS online_users`. This will return ids of users who are online
 
