--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -236,7 +236,7 @@ User data is stored in a hash where each user entry contains the next values:
 
 - Rooms that a user belongs to are stored at `user:{userId}:rooms` as a set of room ids. A room is added by the `SADD user:{userId}:rooms {roomId}` command.
 
-- Messages are stored at room:{roomId} key in a sorted set (as mentioned above). They are added with ZADD room:{roomId} {timestamp} {message} command. Message is serialized to an app-specific JSON string.
+- Messages are stored at `room:{roomId}` key in a sorted set (as mentioned above). They are added with the `ZADD room:{roomId} {timestamp} {message}` command. The message is serialized to an app-specific JSON string.
 
 ### How the data is accessed?
 
