--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -240,7 +240,7 @@ User data is stored in a hash where each user entry contains the next values:
 
 ### How is the data accessed?
 
-Get User HGETALL user:{id}. 
+Get User `HGETALL user:{id}`. 
 
  ```bash
   HGETALL user:2
