--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -32,7 +32,7 @@ Create your free Redis Enterprise Cloud account by visiting [this link](https://
 
 ![heroku](launch_database.png)
 
-The database endpoint URL is unique so will be different in your case. Save it for future reference.
+The database endpoint URL is unique so will be different in your case. Save the URL details, port and password for future reference. 
 
 
 
