Added AWS blogs

--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -14,7 +14,7 @@ The following links provide you with the available options to run apps on Heroku
      <RedisCard
         title="AWS Portal"
         description="Create a Redis database on Heroku"
-        page="/create/aws/awsportal"
+        page="/create/aws/redis-on-aws"
         />
  </div>
  <div class="col">
