--- a/docs/create/aws/redis-on-aws/index-redis-on-aws.mdx
+++ b/docs/create/aws/redis-on-aws/index-redis-on-aws.mdx
@@ -1,8 +1,8 @@
 ---
-id: index-awsportal
+id: index-redis-on-aws
 title: Create Redis database on AWS 
 sidebar_label: Redis on AWS
-slug: /create/aws/awsportal
+slug: /create/aws/redis-on-aws
 authors: [ajeet]
 ---
 
